# kairos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .snyk  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  main.py  mlflow.db  openapi.yaml  pyproject.toml  requirements.txt  test_metrics.py  train.py
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
app/: config.py  dependencies.py  main.py  schemas.py  tasks.py
app/routers/: monitoring.py  prediction.py
config/: ml_config.yaml
data/: home_credit_subset.csv
docker/: alertmanager.yml  api.Dockerfile  prometheus.yml  rules.yml
docker/grafana/dashboards/: banking_risk_dashboard.json  census_analytics_dashboard.json  dashboards.yml  kairos_dashboard.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ONBOARDING.md  PRIVACY.md  RESEARCH.md  TESTING_IMPROVEMENTS.md  TESTING_STRATEGY.md
frontend/: app.py
frontend/templates/: index.html
notebooks/: 01_risk_system_demo.ipynb  benchmark_evaluation.ipynb  calibration_analysis.ipynb
outputs/adult_model/: calibrator.joblib  preprocessor.joblib
outputs/home_credit_model/: calibrator.joblib  preprocessor.joblib
outputs/home_credit_model/ensemble/: metadata.joblib
outputs/kairos_model/: calibrator.joblib  preprocessor.joblib
outputs/kairos_model/ensemble/: metadata.joblib
scripts/: benchmark_baselines.py  evaluate_verbose.py  install_dev.sh  run_e2e_tests.sh  run_load_tests.sh  run_tests.sh
src/kairos/: evaluate.py
src/kairos/api/: config.py  dependencies.py  main.py  schemas.py  tasks.py
tests/: README.md  conftest.py
tests/chaos/: __init__.py  test_chaos.py
tests/e2e/: __init__.py  test_ui.py
tests/integration/: test_api.py  test_async_api.py  test_inference_smoke.py  test_observability.py  test_pipeline_integrity.py
tests/load/: __init__.py  test_load.py
tests/unit/: test_async_tasks.py  test_calibration.py  test_contracts.py  test_evaluate.py  test_loader.py  test_policy.py  test_privacy.py  test_tracking.py  test_transformers.py
(+16 files in other folders)
